backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      #serviceaccount: backstage
      imagePullSecrets:
        - name: backstage-docker-auth2
      containers:
        - name: backstage
          resources:
            limits:
              memory: 1Gi
              cpu: 500m
            requests:
              memory: 1Gi
              cpu: 500m
          image: ghcr.io/paulopanini/backstage:20231017113953
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
